Fixed layout issues on sing in and sign up pages and removed faq from below the second register button

--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -528,6 +528,15 @@ body {
       }
     }
   }
+  #sign_in, #sign_up {
+    width: 600px;
+    input[type="text"], input[type="password"], textarea {
+      width: auto;
+    }
+    ul {
+      margin-top: 20px;
+    }
+  }
 }
 
 #content.admin {
